--- a/001_learn_worldmap_hard_countries/package.json
+++ b/001_learn_worldmap_hard_countries/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "firebase": "11.6.0",
-    "dotenv": "^16.5.0"
+    "firebase": "^10.8.0",
+    "dotenv": "^16.4.5"
   }
 } 
